--- a/Market/templates/inicio.html
+++ b/Market/templates/inicio.html
@@ -1,1 +1,20 @@
-<h1>wenas wenas</h1>
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title</title>
+</head>
+<body>
+	<h1>Hola {{usuario.nombre}}</h1>
+	
+	<ul>
+	{% for p in productos %}
+		<li> {{p.nombre}} - ${{p.precio}}</li>
+	{% endfor %}
+	</ul>
+
+
+
+</body>
+</html>
+
