--- a/Market/templates/inicio.html
+++ b/Market/templates/inicio.html
@@ -2,15 +2,17 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name ="viewport" content="width=device-width,
+	initial-scale=1"
 	<title</title>
 </head>
 <body>
 	<h1>Hola {{usuario.nombre}}</h1>
 	
 	<ul>
-	{% for p in productos %}
-		<li> {{p.nombre}} - ${{p.precio}}</li>
-	{% endfor %}
+		{% for p in productos %}
+			<li> {{p.nombre}} - ${{p.precio}}</li>
+		{% endfor %}
 	</ul>
 
 
