--- a/Market/templates/inicio.html
+++ b/Market/templates/inicio.html
@@ -7,8 +7,18 @@
 	<title</title>
 </head>
 <body>
-	<a href="{% url 'login' %}">Iniciar sesion</a>
-	<h1>Hola {{usuario.nombre}}</h1>
+	{% if user.is_authenticated %}
+		<a href="{% url 'logout' %}">Cerrar sesion</a>		
+	{% else %}
+		<a href="{% url 'login' %}">Iniciar sesion</a>	
+	{% endif %}	
+
+	{% if user.is_authenticated  %}
+		<h1>Hola {{user.get_full_name}}</h1>		
+	{% else %}
+		<h1>Bienvenido bro</h1>
+	{% endif %} 
+	
 	
 	<ul>
 		{% for p in productos %}
